--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,8 +24,12 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
 rusqlite = { version = "0.32", features = ["bundled"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
 keyring = "3"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
+secrecy = "0.10"
+tracing = "0.1"
+url = "2"
 
 [dev-dependencies]
 tempfile = "3"
