--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,12 +24,17 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
 rusqlite = { version = "0.32", features = ["bundled"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
 keyring = "3"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 secrecy = "0.10"
 tracing = "0.1"
 url = "2"
+oauth2 = "4"
+open = "5"
+rand = "0.8"
+base64 = "0.22"
+sha2 = "0.10"
 
 [dev-dependencies]
 tempfile = "3"
