--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
 rusqlite = { version = "0.32", features = ["bundled"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "fs"] }
+csv = "1"
 keyring = "3"
 reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
 futures-util = "0.3"
@@ -36,8 +37,9 @@ open = "5"
 rand = "0.8"
 base64 = "0.22"
 sha2 = "0.10"
+tempfile = "3"
+tokio-util = { version = "0.7", features = ["io"] }
 
 [dev-dependencies]
-tempfile = "3"
 wiremock = "0.6"
 
