feat: implement query editor, bulk upload UI, and app shell
- Add Monaco editor for SOQL with syntax highlighting and Ctrl+Enter
- Add AG Grid results display with clickable Salesforce ID links
- Implement bulk upload UI with file picker, validation, progress, results
- Add Tauri Dialog plugin for native file picker
- Add validate_csv and generate_bulk_results backend commands
- Create app shell with sidebar navigation and org switcher
- Add currentOrg, bulkState, queryState stores
- Support REST and Bulk API query strategies with auto-selection

--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-opener": "^2",
+    "ag-grid-community": "^35.0.0",
+    "monaco-editor": "^0.55.1",
+    "vite-plugin-monaco-editor": "^1.1.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
