--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,8 @@ base64 = "0.22"
 sha2 = "0.10"
 tempfile = "3"
 tokio-util = { version = "0.7", features = ["io"] }
+uuid = { version = "1", features = ["v4"] }
+tauri-plugin-dialog = "2"
 
 [dev-dependencies]
 wiremock = "0.6"
